--- a/server/.env
+++ b/server/.env
@@ -1,8 +1,11 @@
 PORT=4000
-
+MONGODB_URI=
 CORS_ORIGIN=*
 REFRESH_TOKEN_SECRET=IIITDMJ
 ACCESS_TOKEN_SECRET=saurav
 REFRESH_TOKEN_EXPIRY=10d
 ACCESS_TOKEN_EXPIRY=10d
 
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
